--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -25,9 +25,10 @@ body{
             left: 0;
             background-color: rgba(0,0,0,0.6);
             h1{
-        color: #fff
+        color: #fff;
         font-size: 1.2em;
             }
+        }
         
         .name{
             width: 100%;
@@ -36,9 +37,10 @@ body{
             left: 0;
             background-color: rgba(0,0,0,0.6);
             h1{
-        color: #fff
+        color: #fff;
         font-size: 1.2em;
             }
+        }
             
         .gender{
             width: 100%;
@@ -47,9 +49,10 @@ body{
             left: 0;
             background-color: rgba(0,0,0,0.6);
             h1{
-        color: #fff
+        color: #fff;
         font-size: 1.2em;
             }
+        }
             
         .hobby{
             width: 100%;
@@ -61,6 +64,7 @@ body{
         color: #fff;
         font-size: 1.2em;
             }
+        }
             
             
             
